; ModuleID = '/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkioconf.c_mkioconf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkioconf.c_mkioconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"ioconf.c\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"#include <dev/busvar.h>\0A\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mkioconf() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @path(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @unlink(i32 %2)
  %4 = call i32 @path(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = call i32* @fopen(i32 %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %5, i32** %1, align 8
  %6 = load i32*, i32** %1, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = call i32 @path(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @perror(i32 %9)
  %11 = call i32 @exit(i32 1) #3
  unreachable

12:                                               ; preds = %0
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @fprintf(i32* %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @fprintf(i32* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @pseudo_inits(i32* %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @fclose(i32* %19)
  ret void
}

declare dso_local i32 @unlink(i32) #1

declare dso_local i32 @path(i8*) #1

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i32 @perror(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fprintf(i32*, i8*) #1

declare dso_local i32 @pseudo_inits(i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
